--- a/app/src/main/res/layout/item_image.xml
+++ b/app/src/main/res/layout/item_image.xml
@@ -46,6 +46,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="@string/view_on_map"
+                    android:textColor="#FFFFFF"
                     android:backgroundTint="#43A047"
                     android:textSize="16sp"/>
 
