--- a/app/src/main/res/layout/item_trail.xml
+++ b/app/src/main/res/layout/item_trail.xml
@@ -22,15 +22,10 @@
             android:clickable="true"
             android:focusable="true"/>
 
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_gravity="bottom"
-            android:orientation="horizontal">
 
             <!-- Text + Buttons -->
             <LinearLayout
-                android:layout_width="0dp"
+                android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_marginStart="8dp"
                 android:layout_weight="1"
@@ -63,6 +58,7 @@
                         android:backgroundTint="#43A047"
                         android:layout_marginRight="10dp"
                         android:text="@string/view_on_map"
+                        android:textColor="#FFFFFF"
                         android:textSize="16sp" />
 
                     <!-- Favorite Button -->
@@ -111,7 +107,12 @@
                         android:layout_margin="5dp"
                         android:text="1:45 ч." />
                 </LinearLayout>
+                <TextView
+                    android:id="@+id/textDescription"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_margin="5dp"
+                    android:text="" />
             </LinearLayout>
-        </LinearLayout>
     </LinearLayout>
 </androidx.cardview.widget.CardView>
