--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,6 +6,8 @@
     android:id="@+id/rootLayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:navigationBarColor="@color/black"
+    android:fitsSystemWindows="true"
     tools:context=".MainActivity">
 
     <!-- Fullscreen Google Map Fragment -->
