--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,9 +1,12 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
-    <style name="Base.Theme.MountainTrack" parent="Theme.Material3.DayNight.NoActionBar">
+    <style name="Base.Theme.MountainTrack" parent="Theme.AppCompat.DayNight.NoActionBar">
         <!-- Customize your light theme here. -->
-        <item name="android:statusBarColor">?attr/colorPrimaryVariant</item>
+        <item name="android:statusBarColor">?attr/colorPrimaryDark</item>
         <item name="colorPrimary">?attr/colorPrimary</item>
+        <item name="android:navigationBarColor">#FF000000</item>
+        <item name="android:navigationBarDividerColor">#FF000000</item>
+
     </style>
 
     <style name="Theme.MountainTrack" parent="Base.Theme.MountainTrack" />
