--- a/app/src/main/res/layout/activity_find_trails.xml
+++ b/app/src/main/res/layout/activity_find_trails.xml
@@ -3,7 +3,9 @@
     android:layout_height="match_parent"
     android:background="@color/white"
     xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools">
+    xmlns:tools="http://schemas.android.com/tools"
+    android:navigationBarColor="@color/black"
+    android:fitsSystemWindows="true">
 
 
     <androidx.recyclerview.widget.RecyclerView
